[project]
name = "ssh-exec-commands"
version = "0.1.0"
description = "Connect to SSH server using paramiko. Execute commands on remote server."
authors = [
    { name = "yuyosy", email = "y-ysss@outlook.com" }
]
dependencies = [
    "paramiko>=3.4.0",
    "loguru>=0.7.2",
    "ruamel.yaml>=0.18.6",
    "paramiko-expect>=0.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_exec_commands"]
